--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "play online course videos automatically.",
   "main": "main.js",
   "dependencies": {
-    "selenium-webdriver": "^4.0.0-rc-1"
+    "selenium-webdriver": "^4.1.1"
   },
   "devDependencies": {},
   "scripts": {
